deploy/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluecollar-frontend
spec:
  selector:
    app: bluecollar-frontend
  ports:
    - port: 80
      targetPort: 3000
